--- a/assets/css/basics/layout.css
+++ b/assets/css/basics/layout.css
@@ -1,3 +1,4 @@
 .container {
     padding: 0 1em;
+    margin-top: 64px;
 }
